[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palrymetis"
description = "Polymetis wrappers for usage at ALR"
authors = []
version = "0.0.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]

[tool.setuptools.packages.find]
include = ["palrymetis", "palrymetis.**"]
